added new function to calculate max availability and styled main.py

--- a/jupyter_notebooks/data_manipulation.ipynb
+++ b/jupyter_notebooks/data_manipulation.ipynb
@@ -199,17 +199,43 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
-   "source": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "expected ':' (1818108283.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;36m  Cell \u001B[0;32mIn[20], line 3\u001B[0;36m\u001B[0m\n\u001B[0;31m    def listing_with_max_availability(data)\u001B[0m\n\u001B[0m                                           ^\u001B[0m\n\u001B[0;31mSyntaxError\u001B[0m\u001B[0;31m:\u001B[0m expected ':'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "data = pd.read_csv(\"../data/Airbnb_Open_Data.csv\")\n",
+    "def listing_with_max_availability(data):\n",
+    "    listings_grouped_by_type = data.groupby(\"room type\")[\"availability 365\"].sum()\n",
+    "    idx = listings_grouped_by_type.idxmax()\n",
+    "    return (listings_grouped_by_type[idx], idx)\n",
+    "listing_with_max_availability(data)"
+   ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-29T13:07:06.970915Z",
-     "start_time": "2024-04-29T13:07:06.968124Z"
+     "end_time": "2024-05-01T12:07:42.934317Z",
+     "start_time": "2024-05-01T12:07:42.931339Z"
     }
    },
    "id": "8e4d800ab2ff9dca",
-   "execution_count": 54
+   "execution_count": 20
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "f10c1aee7e0104bc"
   }
  ],
  "metadata": {
