--- a/test.ipynb
+++ b/test.ipynb
@@ -111,7 +111,11 @@
    "source": [
     "\n",
     "df1 = df[\"service_fee\"].astype(str).str.replace('$', \"\").astype(np.float64)\n",
-    "df\n"
+    "listings = df[[\"price\", \"availability_365\"]]\n",
+    "listings = listings[(listings[\"price\"] <= 120) & (listings[\"price\"] >= lower_bound)]\n",
+    "        listings_with_availability = listings[listings[\"availability_365\"] >= days]\n",
+    "        quotient = listings.shape[0] / listings_with_availability.shape[0]\n",
+    "        return round(100 / quotient)"
    ],
    "metadata": {
     "collapsed": false,
